--- a/plugins/account/projectsList.jade
+++ b/plugins/account/projectsList.jade
@@ -1,4 +1,3 @@
-| {{vm.projectsGrouped}}
 .col-xs-12
 	div(ng-repeat="(account, projects) in vm.AccountData.projectsGrouped")
 		h3 {{account}}
@@ -9,3 +8,5 @@
 					span.commit-number
 						a(ng-href="{{'/' + account + '/' + project}}") {{project}}
 					md-button(ng-click="vm.b4f(account, project)") B4F
+
+md-button(ng-click="vm.b4f(account, project)", style="margin-top:50px") Bid 4 Free
