--- a/plugins/bid/bid.jade
+++ b/plugins/bid/bid.jade
@@ -32,35 +32,15 @@
 
 				// Sub Contractor
 				div(ng-if="vm.userIsASubContractor")
-					.cardInfo(ng-if="!vm.projectSelected")
-						p There is currently no project selected
-					div(ng-if="vm.projectSelected")
-						.projectTitle(layout="row", layout-align="start center")
-							h3 {{vm.invitedProjects[vm.selectedProjectIndex].name}}
-							md-icon(ng-class="vm.invitedProjects[vm.selectedProjectIndex].statusIcon")
-						md-list-item
-							p(flex="20") Budget
-							p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].budget}}
-						md-list-item
-							p(flex="20") Site
-							p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].site}}
-						md-list-item
-							p(flex="20") Completed by
-							p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].completed_by_pretty}}
-						md-divider
-						div(display="row", ng-if="vm.showRepondButtons")
-							md-button.md-accent(ng-click="vm.acceptInvite(true)") Accept
-							md-button.md-accent(ng-click="vm.acceptInvite(false)") Decline
-						.projectDates
-							md-list-item
-								p(flex="20") Invited
-								p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].date_invited_pretty}}
-							md-list-item
-								p(flex="20") Responded
-								p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].date_responded_pretty}}
-							md-list-item
-								p(flex="20") Result
-								p(flex="80") {{vm.invitedProjects[vm.selectedProjectIndex].date_answered_pretty}}
+					md-list-item
+						p(flex="20") Budget
+						p(flex="80") {{vm.summary.budget}}
+					md-list-item
+						p(flex="20") Site
+						p(flex="80") {{vm.summary.site}}
+					md-list-item
+						p(flex="20") Completed by
+						p(flex="80") {{vm.summary.completed_by_pretty}}
 
 	.bidInvite.md-whiteframe-1dp(flex=45)
 		md-toolbar
@@ -86,10 +66,13 @@
 
 				// Sub Contractor
 				div(ng-if="vm.userIsASubContractor")
-					md-subheader.md-no-sticky Invited Projects
-					md-list-item.invitedProject(
-						ng-repeat="invited in vm.invitedProjects"
-						ng-class="{selectedProject: invited.selected, unselectedProject: !invited.selected}"
-						)
-						md-icon(ng-class="invited.statusIcon")
-						p(ng-click="vm.selectProject($index)") {{invited.name}}
+					md-icon(ng-class="vm.response.statusIcon")
+					md-list-item
+						p(flex="20") Invited
+						p(flex="80") {{vm.response.date_invited_pretty}}
+					md-list-item
+						p(flex="20") Responded
+						p(flex="80") {{vm.response.date_invited_pretty}}
+					md-list-item
+						p(flex="20") Result
+						p(flex="80") {{vm.response.date_invited_pretty}}
