--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -5,7 +5,7 @@ div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", style="heig
 			span(class="fa", ng-class="vm.contentData.icon")
 			label(class="md-flex") {{vm.contentData.title}}
 			span(flex)
-			md-button.md-icon-button(aria-label="Print", ng-href="{{vm.issuesUrl}}", target="_blank", ng-if="vm.contentData.canPrint")
+			md-button.md-icon-button(aria-label="Print", ng-href="{{vm.issuesUrl}}", ng-click="vm.doPrint($event)", target="_blank", ng-if="vm.contentData.canPrint")
 				md-icon(class="fa fa-print")
 			md-button.md-icon-button(aria-label="Filter", ng-click="vm.toggleFilter($event)", ng-if="vm.contentData.hasFilter")
 				md-icon(class="fa fa-search")
