--- a/plugins/panel/panel.jade
+++ b/plugins/panel/panel.jade
@@ -1,9 +1,9 @@
 div(ng-show="vm.showPanel")
-	div#items
+	div#items(ng-class="{ active : vm.activate }")
 		div(ng-repeat="contentItem in vm.contentItems")
 			panel-content(position="vm.position", content-data='contentItem', ng-show='contentItem.show')
 			div(ng-if="contentItem.showGap", style="display:block; height:20px;")
-	div#buttons
+	div#buttons(ng-class="{ active : vm.activate }")
 		.panelButtonGroup(ng-repeat="contentItem in vm.contentItems")
 			md-button.md-fab.md-primary.md-mini(ng-click="vm.buttonClick(contentItem.type)", aria-label="{{contentItem.title}}")
 				md-icon(class="fa", md-font-icon="{{contentItem.icon}}")
