--- a/plugins/login/login.jade
+++ b/plugins/login/login.jade
@@ -5,7 +5,7 @@
 			h2 scalable, open platform
 		.col-md-4
 			#credentials-box(ng-controller='LoginCtrl')
-				//h5.version.top-gap Version: #{version}
+				h5.version.top-gap Version: {{version}}
 				form.signin(ng-submit='login()')
 					input(type='text', ng-model='user.username', class='form-control top-gap', placeholder='Username', required, autofocus)
 					input(type='password', ng-model='user.password', class='form-control top-gap', placeholder='Password', required)
