ISSUE #168 - Tree an Issues have height dependent on content

--- a/plugins/panel/panelContent.jade
+++ b/plugins/panel/panelContent.jade
@@ -1,6 +1,6 @@
 div(id="vm.contentItem", layout="column", class="md-whiteframe-1dp", style="height:{{vm.contentHeight}}px")
 
-	md-toolbar(class="md-primary", ng-click="vm.click()")
+	md-toolbar(class="md-primary", ng-click="vm.toolbarClick()")
 		div(class="md-toolbar-tools")
 			span(class="fa", ng-class="vm.contentData.icon")
 			label(class="md-flex") {{vm.contentData.title}}
