--- a/public/plugins/tree/tree.css
+++ b/public/plugins/tree/tree.css
@@ -1,6 +1,7 @@
 tree {
   display: block;
   width: 100%;
+  height: 100%;
 }
 
 tree span {
@@ -89,10 +90,11 @@ tree .treeButton .treeButtonDisabled {
 tree .virtualRepeatInfiniteScroll {
   overflow-y: auto;
   overflow-x: hidden;
+  height: 100%;
 }
 
 tree .virtualRepeatInfiniteScroll .vertical-container {
-  height: 770px;
+  height: 100%;
   width: 350px;
 }
 
