--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1611,7 +1611,8 @@ ul.fancytree-container li {
 #Axes {
 	width: 100px;
 	height: 100px;
-	bottom: 0px;
+  	left: 225px;
+	bottom: -80px;
 	position: absolute;
 	border: none;
 }
